fix mathjax giving document scrollbar

--- a/css/default-layout.css
+++ b/css/default-layout.css
@@ -94,3 +94,8 @@ hr {
     padding: 0; 
 }
 
+.MathJax_Display {
+    overflow-x: auto;
+    overflow-y: hidden;
+}
+
